[project]
name = "glacier-watch-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.2",
    "geoalchemy2>=0.18.1",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.9",
    "ty>=0.0.2",
]
